--- a/public/02-catalog.html
+++ b/public/02-catalog.html
@@ -184,112 +184,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="sAllCategories__col sAllCategories__col--js col-12">
-							<div class="sAllCategories__fullList">
-								<div class="sAllCategories__row-full-list row">
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Сварочное оборудование
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для плазменной резки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для контактной сварки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Сварочное оборудование
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для плазменной резки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для контактной сварки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Сварочное оборудование
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для контактной сварки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для плазменной резки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Сварочное оборудование
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для контактной сварки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для плазменной резки
-											</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
 						<div class="col">
-							<button class="sAllCategories__show"> 
-								<p class="sAllCategories__text">Все категории
-								</p>
+							<button class="sAllCategories__toggle" data-open="Все категории" data-close="Скрыть"> Все категории
 							</button>
 						</div>
 					</div>
@@ -433,7 +329,7 @@
 						<!-- start sCatalogBody-->
 						<div class="sCatalogBody" id="sCatalogBody">
 							<div class="sCatalogBody__row row">
-								<div class="col-auto col-md-6 col-lg-4 col-xxl-3">
+								<div class="col-12 col-md-6 col-lg-4 col-xxl-3">
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
@@ -494,7 +390,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-auto col-md-6 col-lg-4 col-xxl-3">
+								<div class="col-12 col-md-6 col-lg-4 col-xxl-3">
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
@@ -555,7 +451,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-auto col-md-6 col-lg-4 col-xxl-3">
+								<div class="col-12 col-md-6 col-lg-4 col-xxl-3">
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
@@ -616,7 +512,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-auto col-md-6 col-lg-4 col-xxl-3">
+								<div class="col-12 col-md-6 col-lg-4 col-xxl-3">
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
@@ -677,7 +573,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-auto col-md-6 col-lg-4 col-xxl-3">
+								<div class="col-12 col-md-6 col-lg-4 col-xxl-3">
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
@@ -738,7 +634,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-auto col-md-6 col-lg-4 col-xxl-3">
+								<div class="col-12 col-md-6 col-lg-4 col-xxl-3">
 									<div class="product-card">
 										<div class="product-card__img-wrap"><a href="#"><img src="img/product-card-1.jpg" alt="" loading="lazy"/></a>
 										</div>
@@ -831,26 +727,28 @@
 			<div class="sProductDesc" id="sProductDesc">
 				<div class="container">
 					<div class="tabs">
-						<div class="sProductDesc__tabs tabs__caption">
-							<div class="sProductDesc__tabs-btn tabs__btn active"> 
-								<svg class="icon icon-ddgroup-icon-1 ">
-									<use xlink:href="img/svg/sprite.svg#ddgroup-icon-1"></use>
-								</svg>Похожие товары
-							</div>
-							<div class="sProductDesc__tabs-btn tabs__btn">
-								<svg class="icon icon-ddgroup-icon-2 ">
-									<use xlink:href="img/svg/sprite.svg#ddgroup-icon-2"></use>
-								</svg>Описание
-							</div>
-							<div class="sProductDesc__tabs-btn tabs__btn">
-								<svg class="icon icon-ddgroup-icon-3 ">
-									<use xlink:href="img/svg/sprite.svg#ddgroup-icon-3"></use>
-								</svg>Отзывы(Без авторизации)
-							</div>
-							<div class="sProductDesc__tabs-btn tabs__btn">
-								<svg class="icon icon-ddgroup-icon-3 ">
-									<use xlink:href="img/svg/sprite.svg#ddgroup-icon-3"></use>
-								</svg>Отзывы(С авторизацией)
+						<div class="sProductDesc__slider sProductDesc__slider--js2 swiper">
+							<div class="sProductDesc__tabs tabs__caption swiper-wrapper">
+								<div class="sProductDesc__tabs-btn tabs__btn active swiper-slide">
+									<svg class="icon icon-ddgroup-icon-1 ">
+										<use xlink:href="img/svg/sprite.svg#ddgroup-icon-1"></use>
+									</svg>Похожие товары
+								</div>
+								<div class="sProductDesc__tabs-btn tabs__btn swiper-slide">
+									<svg class="icon icon-ddgroup-icon-2 ">
+										<use xlink:href="img/svg/sprite.svg#ddgroup-icon-2"></use>
+									</svg>Описание
+								</div>
+								<div class="sProductDesc__tabs-btn tabs__btn swiper-slide">
+									<svg class="icon icon-ddgroup-icon-3 ">
+										<use xlink:href="img/svg/sprite.svg#ddgroup-icon-3"></use>
+									</svg>Отзывы(Без авторизации)
+								</div>
+								<div class="sProductDesc__tabs-btn tabs__btn swiper-slide">
+									<svg class="icon icon-ddgroup-icon-3 ">
+										<use xlink:href="img/svg/sprite.svg#ddgroup-icon-3"></use>
+									</svg>Отзывы(С авторизацией)
+								</div>
 							</div>
 						</div>
 						<div class="tabs__wrap">
@@ -1078,112 +976,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="sAllCategories__col sAllCategories__col--js col-12">
-							<div class="sAllCategories__fullList">
-								<div class="sAllCategories__row-full-list row">
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Сварочное оборудование
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для плазменной резки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для контактной сварки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Сварочное оборудование
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для плазменной резки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для контактной сварки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Сварочное оборудование
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для контактной сварки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для плазменной резки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Сварочное оборудование
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для контактной сварки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для плазменной резки
-											</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
 						<div class="col">
-							<button class="sAllCategories__show"> 
-								<p class="sAllCategories__text">Все категории
-								</p>
+							<button class="sAllCategories__toggle" data-open="Все категории" data-close="Скрыть"> Все категории
 							</button>
 						</div>
 					</div>
