--- a/public/index.html
+++ b/public/index.html
@@ -1553,112 +1553,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="sAllCategories__col sAllCategories__col--js col-12">
-							<div class="sAllCategories__fullList">
-								<div class="sAllCategories__row-full-list row">
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Сварочное оборудование
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для плазменной резки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для контактной сварки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Сварочное оборудование
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для плазменной резки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для контактной сварки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Сварочное оборудование
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для контактной сварки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для плазменной резки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Сварочное оборудование
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для контактной сварки
-											</a>
-										</div>
-									</div>
-									<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-										<div class="categories-item">
-											<a class="categories-item__title" href="#">Аппараты для плазменной резки
-											</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
 						<div class="col">
-							<button class="sAllCategories__show"> 
-								<p class="sAllCategories__text">Все категории
-								</p>
+							<button class="sAllCategories__toggle" data-open="Все категории" data-close="Скрыть"> Все категории
 							</button>
 						</div>
 					</div>
