edit category script

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,4 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet"><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
@@ -12,7 +10,9 @@
 		<link href="libs/swiper/swiper.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="libs/ion-rangeslider/css/ion.rangeSlider.min.css" rel="stylesheet"/>
-		<link href="css/main.min.css?v=0.0.1" rel="stylesheet"/>
+		<link href="css/main.min.css?v=0.0.1" rel="stylesheet"/><link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 	</head>
 	<body class="main-page">
 		<div class="main-wrapper">
@@ -1500,7 +1500,7 @@
 				<div class="container sliderAutoWidthWrap">
 					<div class="row">
 						<div class="col-10">
-							<div class="sliderAutoWidth sliderAutoWidth--js swiper">
+							<div class="sliderCategotiesLinks sliderCategotiesLinks--js swiper">
 								<div class="swiper-wrapper">
 									<div class="swiper-slide">
 										<div class="categories-item">
